--- a/blog_post.html
+++ b/blog_post.html
@@ -15,16 +15,88 @@
         </div>
         <div class="feature">feature</div>
         <div class="content box">
-            <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-                deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
-                provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
-                Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                perferendis doloribus asperiores repellat."
-            </p>
+            <article>
+                <p>Vivamus nisi neque, varius tincidunt congue at, rutrum ac magna. Nullam hendrerit volutpat auctor. Sed aliquam
+                    efficitur odio viverra accumsan. Proin tortor ex, posuere euismod egestas ac, ullamcorper in metus. Nullam lobortis
+                    justo tristique congue porttitor. Nullam in faucibus elit. Morbi justo leo, porttitor vel purus at, rhoncus semper
+                    lorem. Proin accumsan euismod pretium. Integer scelerisque vel arcu faucibus vehicula. Aenean sagittis euismod
+                    consectetur. Quisque ac ante ligula.
+                 </p>
+                 <p>Donec arcu justo, ultricies sit amet augue in, convallis faucibus eros. Vestibulum laoreet congue tortor, id
+                    tincidunt arcu volutpat tincidunt. Etiam blandit sagittis lectus, vel luctus purus placerat ac. Vivamus aliquet
+                    mauris luctus est porttitor accumsan. Etiam eu elementum nisi. Nam pretium tristique odio at pharetra. Pellentesque
+                    mollis fringilla elementum. Aliquam et pharetra neque. Etiam sit amet nibh vitae orci faucibus accumsan. Cras eget
+                    hendrerit dui.
+                 </p>
+                 <p>Morbi consequat posuere mauris, nec luctus nunc malesuada eget. Morbi semper, felis at placerat ullamcorper, elit
+                    dui elementum quam, non sollicitudin tellus lacus in turpis. Curabitur ut mattis purus. Nunc vulputate metus vel
+                    nisi posuere, rhoncus dapibus neque consequat. Aenean consequat non mauris vitae efficitur. Aliquam viverra lorem
+                    lectus, ac facilisis nibh sagittis a. Aenean tincidunt, lacus ut fermentum tincidunt, mi neque consequat justo,
+                    vitae varius massa justo a dui. Suspendisse potenti. Vivamus vehicula nibh justo, vitae convallis diam ultrices sit
+                    amet. Fusce gravida ultricies augue sit amet elementum. Vestibulum non nisi tincidunt, dapibus enim at, lobortis
+                    mauris. Curabitur diam nunc, bibendum quis vestibulum vitae, gravida in turpis.
+                 </p>
+                 <p>Curabitur non mi non diam ultricies dictum non eu eros. Cras aliquet a odio sed consectetur. Ut vulputate blandit
+                    orci. Maecenas porttitor mi ac nunc ullamcorper accumsan. Donec egestas magna fermentum dui cursus, vitae aliquet ex
+                    vulputate. Duis in tristique felis, ac placerat sapien. Donec at viverra metus. Nullam a est ut enim lobortis
+                    euismod. Sed feugiat sapien a ligula lobortis tristique. Praesent sodales elementum venenatis. Sed vel augue
+                    consequat, condimentum justo non, imperdiet dolor.
+                 </p>
+                 <p>Mauris nulla lacus, elementum ac nunc eget, rhoncus aliquet ligula. Proin mi ex, sollicitudin non pulvinar sed,
+                    commodo in urna. Quisque eget enim a orci condimentum tristique. Morbi vehicula non sapien vitae lobortis. Maecenas
+                    ex augue, efficitur vel mi et, ultricies blandit nunc. Duis viverra pretium felis id sollicitudin. Phasellus ut
+                    justo in sapien tincidunt elementum. Nunc sollicitudin, elit ac ultricies interdum, lectus ipsum facilisis velit, id
+                    interdum eros libero quis neque. Nullam pharetra quam risus, eu elementum nisi mattis in. Duis sit amet risus
+                    semper, cursus augue ut, sollicitudin metus. Vestibulum auctor leo dolor.</p>
+                
+                 <p>Nunc imperdiet non orci et laoreet. Pellentesque pellentesque sed dolor a fringilla. Suspendisse velit nunc,
+                    molestie in diam in, vehicula consectetur lorem. Suspendisse sit amet turpis posuere, sodales neque in, suscipit
+                    nunc. Aliquam non lorem turpis. Nam porta interdum accumsan. Mauris justo enim, finibus ac sapien vitae, venenatis
+                    consequat leo. Nullam metus magna, pretium eget auctor in, laoreet ut ex. Aenean nec tellus feugiat, facilisis ante
+                    a, viverra elit. Nullam finibus erat vitae elit ullamcorper placerat. Suspendisse egestas congue lacus, vitae tempus
+                    sem euismod nec.
+                 </p>
+                 <p>Ut gravida maximus risus, eu hendrerit leo interdum vel. Nulla suscipit ex id justo blandit finibus. Sed rutrum
+                    mollis tempor. Duis nisi odio, placerat sed scelerisque at, vestibulum luctus purus. Suspendisse placerat, nibh quis
+                    convallis tincidunt, purus purus consectetur tortor, sit amet pretium diam elit vitae diam. Suspendisse potenti.
+                    Pellentesque tempor hendrerit sem, vitae tempor purus vestibulum quis. Aenean sit amet accumsan ante, vel aliquam
+                    risus. Mauris faucibus, felis nec suscipit tempor, quam lorem rhoncus metus, nec porta est nisl aliquam nibh.
+                    Phasellus non vulputate mauris. Integer eleifend porttitor nisi vel scelerisque.
+                 </p>
+                 <p>Curabitur pellentesque a nulla id euismod. Integer dapibus, tellus ac dictum accumsan, enim leo maximus magna, sit
+                    amet dignissim diam enim in felis. Proin posuere tellus a molestie gravida. Vivamus molestie purus sed quam pretium,
+                    sit amet blandit turpis bibendum. Vestibulum viverra, sem nec pretium sollicitudin, eros ex porttitor urna, sit amet
+                    rhoncus sem lectus ut dolor. Etiam maximus dictum justo, quis fringilla odio interdum in. Nunc lacinia egestas neque
+                    vel scelerisque. Nullam nisl quam, interdum sed purus sit amet, mattis ultrices orci. Morbi viverra felis eget neque
+                    vulputate, a dapibus sapien vulputate. Etiam fringilla sem vehicula, scelerisque urna sit amet, auctor enim.
+                 </p>
+                 <p>Mauris egestas nec ligula eu auctor. In hac habitasse platea dictumst. Donec rutrum tellus at mi dapibus, et gravida
+                    lacus pharetra. Etiam volutpat et ante blandit dictum. Phasellus aliquam leo non nulla aliquet aliquam. Etiam
+                    imperdiet mauris in est convallis luctus. Nulla facilisi.
+                 </p>
+                 <p>Ut feugiat neque sapien, at lacinia libero condimentum ut. Nulla ullamcorper urna sit amet ipsum blandit dapibus.
+                    Nullam convallis nisi nec enim ultrices, in aliquam lorem gravida. Sed felis tellus, semper sit amet sem vitae,
+                    accumsan ultricies lacus. Quisque eget dignissim est, nec scelerisque urna. Praesent tempor ex id rutrum semper. Sed
+                    elementum, eros sit amet tristique auctor, orci sapien sollicitudin ligula, eget elementum ex mauris et orci.
+                 </p>
+                 <p>Nulla lectus purus, condimentum non laoreet vel, luctus nec dolor. Nulla facilisi. Donec non condimentum sapien.
+                    Maecenas sed risus ut urna aliquam eleifend quis at velit. Quisque tristique mattis ex ut semper. Nullam eget cursus
+                    magna. Maecenas eleifend eros quis urna sollicitudin imperdiet. Phasellus vel tortor neque. Nam non semper lorem.
+                    Vestibulum quis risus lacinia, fermentum risus vel, posuere augue. Cras suscipit, sapien id ultrices volutpat, dui
+                    dui mollis sem, sed iaculis nunc dui sit amet turpis. Vivamus placerat tortor nulla, quis ultricies elit sagittis
+                    vel. Maecenas nec urna ac lorem maximus semper ut ut massa. Suspendisse potenti. Cras consequat ante fermentum,
+                    pellentesque justo id, rutrum quam. Duis id lorem convallis, sodales tellus sit amet, commodo purus.
+                 </p>
+                 <p>Nunc eu nisi ac metus placerat malesuada. Aliquam erat volutpat. Etiam pulvinar sed lectus at elementum. Duis
+                    feugiat nec quam et mollis. Nunc hendrerit quis magna non condimentum. In orci arcu, sodales gravida molestie sed,
+                    dapibus ut lorem. Sed euismod erat sed porta accumsan. Suspendisse eu orci ut dolor auctor fringilla. Mauris euismod
+                    auctor odio non tristique. Phasellus accumsan magna sem, non vestibulum orci euismod sed. Interdum et malesuada
+                    fames ac ante ipsum primis in faucibus. Aliquam malesuada, sem vel iaculis egestas, nibh nibh condimentum nibh, eu
+                    vestibulum augue augue dictum justo. Pellentesque pharetra eget eros sed pulvinar. Curabitur pellentesque lacinia
+                    sagittis. Ut eget leo at leo varius auctor vel at sem. Suspendisse sit amet eleifend mauris.
+                 </p>
+                </article>
+            
         </div>
         <div class="footer box">
             <a href="index.html">Go back to Home Page</a>
