--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="main-container">
 
     <!-- Header -->
-    <div class="header box">
+    <div class="header">
       <h1>Valeria's Blog</h1>
+      <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
     </div>
 
+    <!-- article's container -->
     <div class="blogs-container">
       <!-- Blog's Articles to go to -->
       <div class="blog-post box">
@@ -57,9 +64,9 @@
     </div>
 
     <!-- Sidebar -->
-    <div class="sidebar box">
+    <div class="sidebar">
       <h3>About</h3>
-      <div class="side-cont">Valeria Oggioni is an artist, musician and web developer</div>
+      <p class="side-cont">Valeria Oggioni is an artist, musician and web developer</p>
       <div class="side-cont"></div>
       <div class="side-cont"></div>
 
@@ -67,7 +74,10 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer box">Footer</div>
+    <div class="footer">
+      <p>Not all who wonder are lost</p>
+      <a href="">Subscribe for more :)</a>
+    </div>
   </div>
 </body>
 
