--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="header">
       <h1>Valeria's Blog</h1>
       <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="">Home</a>
+        <a href="index.html">Blog</a>
+        <a href="">Contact</a>
+        <a href="">About</a>
       </div>
     </div>
 
